--- a/index.html
+++ b/index.html
@@ -499,6 +499,103 @@
                 </div>
             </div>
         </section>
+
+        <section class="news">
+            <div class="container">
+                <div class="news__cards">
+                    <div class="news__card">
+                        <h2 class="title">Yangiliklar</h2>
+                        <div class="news__card-content">
+                            <h3 class="news__card-title">
+                                Uzmobile xizmatlariga ulanganda ID-kartalarni ham qabul qiladi!
+                            </h3>
+                            <p class="news__card-txt">
+                                "O‘zbektelekom" AK "Elektron hukumat
+                                loyihalarini boshqarish markazi" davlat
+                                muassasi bilan hamkorlikda UZTELECOM
+                                mijozlariga barcha xizmatlarini ulashda va
+                                ulardan foydalanishda shaxsni tasdiqlovchi
+                                hujjat sifatida identifikatsiya kartasidan
+                                (ID-karta).
+                            </p>
+                            <div class="news__card-bottom">
+                                <p class="news__card-date">02 Fevral, 2021</p>
+                                <div class="news__card-btns">
+                                    <a href="#!" class="news__card-btn">
+                                        <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M2.828 7.00001L7.778 11.95L6.364 13.364L-5.56359e-07 7.00001L6.364 0.636013L7.778 2.05001L2.828 7.00001Z" fill="black" />
+                                        </svg>
+                                    </a>
+                                    <a href="#!" class="news__card-btn">
+                                        <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M5.172 6.99999L0.222 2.04999L1.636 0.635986L8 6.99999L1.636 13.364L0.222 11.95L5.172 6.99999Z" fill="black" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="news__card">
+                        <h2 class="title">Aksiyalar</h2>
+                        <div class="news__card-content">
+                            <h3 class="news__card-title">
+                                "CHIROYLI" raqamni qayta rasmiylashtirish uchun 90 % chegirma!
+                            </h3>
+                            <p class="news__card-txt">
+                                Yangi yil eshik qoqmoqda, biz esa abonentlarimizni ajoyib
+                                 yangiliklar bilan xursand qilishda davom etamiz. Abonentlarimizning
+                                  ko‘plab iltimoslariga ko‘ra, yangi yilda ham “MyUZTELECOM mobil
+                                   ilovasidan foydalaning va bonusli Internet-paketlarga ega bo‘ling”
+                            </p>
+                            <div class="news__card-bottom">
+                                <p class="news__card-date">02 Fevral, 2021</p>
+                                <div class="news__card-btns">
+                                    <a href="#!" class="news__card-btn">
+                                        <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M2.828 7.00001L7.778 11.95L6.364 13.364L-5.56359e-07 7.00001L6.364 0.636013L7.778 2.05001L2.828 7.00001Z" fill="black" />
+                                        </svg>
+                                    </a>
+                                    <a href="#!" class="news__card-btn">
+                                        <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M5.172 6.99999L0.222 2.04999L1.636 0.635986L8 6.99999L1.636 13.364L0.222 11.95L5.172 6.99999Z" fill="black" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="news__card">
+                        <h2 class="title">Xabarnomalar</h2>
+                        <div class="news__card-content">
+                            <h3 class="news__card-title">
+                                "Smart Mobile Group" MCHJ xizmat narxida o‘zgartirishlar 
+                            </h3>
+                            <p class="news__card-txt">
+                                "O‘zbektelekom" AK "Elektron hukumat loyihalarini
+                                 boshqarish markazi" davlat muassasi bilan hamkorlikda
+                                 UZTELECOM mijozlariga barcha xizmatlarini ulashda va ulardan
+                                  foydalanishda shaxsni tasdiqlovchi hujjat sifatida identifikatsiya kartasidan (ID-karta).
+                            </p>
+                            <div class="news__card-bottom">
+                                <p class="news__card-date">02 Fevral, 2021</p>
+                                <div class="news__card-btns">
+                                    <a href="#!" class="news__card-btn">
+                                        <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M2.828 7.00001L7.778 11.95L6.364 13.364L-5.56359e-07 7.00001L6.364 0.636013L7.778 2.05001L2.828 7.00001Z" fill="black" />
+                                        </svg>
+                                    </a>
+                                    <a href="#!" class="news__card-btn">
+                                        <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M5.172 6.99999L0.222 2.04999L1.636 0.635986L8 6.99999L1.636 13.364L0.222 11.95L5.172 6.99999Z" fill="black" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
