--- a/index.html
+++ b/index.html
@@ -596,6 +596,32 @@
                 </div>
             </div>
         </section>
+
+        <section class="location">
+            <div class="container">
+                <h2 class="title">Bizning filiallarimiz</h2>
+                <form action="" class="location__form">
+                    <select>
+                        <option value="">Toshkent shahri</option>
+                        <option value="">Sirdaryo viloyati</option>
+                        <option value="">Samarqand viloyati</option>
+                        <option value="">Surxondaryo viloyati</option>
+                        <option value="">Qashqadaryo viloyati</option>
+                        <option value="">Navoiy viloyati</option>
+                        <option value="">Namangan viloyati</option>
+                        <option value="">Xorazm viloyati</option>
+                        <option value="">Jizzax viloyati</option>
+                        <option value="">Fargʻona viloyati</option>
+                        <option value="">Buxoro viloyati</option>
+                        <option value="">Andijon viloyati</option>
+                    </select>
+                    <svg width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M7.99998 6.46497L14.1875 0.277466L15.955 2.04497L7.99998 9.99997L0.0449829 2.04497L1.81248 0.277466L7.99998 6.46497Z" fill="black" />
+                    </svg>
+                </form>
+            </div>
+            <div class="location__map" style="position:relative;overflow:hidden;"><a href="https://yandex.uz/maps/10335/tashkent/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Ташкент</a><a href="https://yandex.uz/maps/10335/tashkent/?ll=69.276531%2C41.312815&utm_medium=mapframe&utm_source=maps&z=12.08" style="color:#eee;font-size:12px;position:absolute;top:14px;">Ташкент — Яндекс Карты</a><iframe src="https://yandex.uz/map-widget/v1/?ll=69.276531%2C41.312815&z=12.08"  allowfullscreen="true" style="position:relative;"></iframe></div>
+        </section>
     </main>
 </body>
 </html>
